fixscrollBarBug1.2

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
   font-style: normal;
   margin: 0px;
   padding: 0px;
+  background-color: #0d1b2a;
+  height: 100vh;
 }
 
 body {
